<resources>
    <string name="app_name">GroceryStore</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="find_your_groceries_at_home">Find your groceries at home</string>
    <string name="join_now">Join Now</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="username">Username</string>
    <string name="create_account">Create Account</string>
    <string name="phone_number">Phone Number</string>
    <string name="cart">Cart</string>
    <string name="sign_out">Sign Out</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Price</string>
    <string name="quantity">Qty</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="item_added_successfully">Item added Successfully</string>
    <string name="title_activity_cartt">Cartt</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_activity_profile">Profile</string>
    <string name="action_settings">Settings</string>
    //maps
    <string name="title_activity_maps">Current Place Details</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
