<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="13dp"
    app:strokeWidth="2dp"
    android:layout_margin="2dp"
    app:strokeColor="@color/colorPrimaryDark"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <LinearLayout
        android:orientation="horizontal"
        android:padding="5dp"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/product_image"
            android:layout_width="120dp"
            android:contentDescription="@android:string/untitled"
            android:layout_height="match_parent"
            android:src="@android:drawable/ic_menu_gallery">
        </ImageView>
        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:padding="5dp"
            android:layout_margin="6dp"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/product_name"
                android:textSize="17sp"
                android:padding="2dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/product_name">

            </TextView>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/product_price"
                android:text="@string/product_price"
                android:layout_below="@id/product_name"
                android:textSize="17sp"
                android:padding="2dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </com.google.android.material.textview.MaterialTextView>
            <TextView
                android:id="@+id/product_quantity"
                android:layout_below="@id/product_price"
                android:textSize="17sp"
                android:padding="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity">
            </TextView>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/product_delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Remove"
                app:backgroundTint="@color/deep_orange_600"
                app:icon="@drawable/ic_delete_black_24dp"

                app:iconGravity="textStart"
                android:layout_below="@id/product_quantity"
                >
            </com.google.android.material.button.MaterialButton>

        </RelativeLayout>
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
